--- a/Admin_Management/admin.html
+++ b/Admin_Management/admin.html
@@ -4,120 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #eef1f7;
-            color: #333;
-        }
-
-        /* Header Styling */
-        header {
-            background-color: #2C3E50;
-            color: white;
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .page-title {
-            font-size: 1.8rem;
-            font-weight: bold;
-        }
-
-        .logout-btn {
-            background-color: #E74C3C;
-            color: white;
-            padding: 8px 15px;
-            text-decoration: none;
-            font-size: 0.9rem;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .logout-btn:hover {
-            background-color: #C0392B;
-        }
-
-        /* Breadcrumb Styling */
-        .breadcrumb {
-            margin: 20px 40px;
-            font-size: 0.9rem;
-        }
-
-        .breadcrumb a {
-            color: #2C3E50;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .breadcrumb a:hover {
-            text-decoration: underline;
-        }
-
-        /* Main Content Styling */
-        main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 50px 20px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            color: #2C3E50;
-        }
-
-        /* Tiles Layout */
-        .tile-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            max-width: 900px;
-            margin: auto;
-        }
-
-        .tile {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-            text-decoration: none;
-            color: #2C3E50;
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-
-        .tile:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        /* Footer Styling */
-        footer {
-            background-color: #2C3E50;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-            margin-top: 40px;
-        }
-    </style>
-</head>
+    <link rel="stylesheet" href="../Style/admin_style.css"> </head>
 <body>
-    <header>
-        <div class="page-title">Admin Dashboard</div>
-        <a href="/" class="logout-btn">Logout</a>
+    <header class="header">
+        <nav class="navbar">
+             <div class="logo">Admin Dashboard</div> <a href="/" class="logout-btn" onclick="localStorage.clear();">Logout</a>
+        </nav>
     </header>
+
     <div class="breadcrumb">
         <a href="/admin">Admin Dashboard</a>
     </div>
+
     <main>
         <h1>Welcome, Admin!</h1>
         <div class="tile-container">
@@ -126,13 +24,13 @@
             <a href="/list-questions" class="tile">List All Questions</a>
         </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Your Company. All rights reserved.</p>
+
+    <footer class="footer"> <p>&copy; 2025 DISC Personality. All rights reserved.</p>
     </footer>
+
     <script>
         const username = localStorage.getItem("username");
-    
-        if (!username || username !== 'sangram') {
+        if (!username || username !== 'sangram') { // Assuming 'sangram' is the admin username
             alert("You are not authorized to access this page. Redirecting to login page...");
             window.location.href = "/";
         }
