--- a/Admin_Management/list_questions.html
+++ b/Admin_Management/list_questions.html
@@ -4,58 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Questions</title>
+    <link rel="stylesheet" href="../Style/admin_style.css">
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #eef1f7;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-
-        /* Header Styling */
-        header {
-            background-color: #2C3E50;
-            color: white;
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .page-title {
-            font-size: 1.8rem;
-            font-weight: bold;
-        }
-
-        .logout-btn {
-            background-color: #E74C3C;
-            color: white;
-            padding: 8px 15px;
-            text-decoration: none;
-            font-size: 0.9rem;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .logout-btn:hover {
-            background-color: #C0392B;
-        }
-
-        /* Breadcrumb Styling */
+        /* Additional styles for breadcrumb alignment */
         .breadcrumb {
-            margin: 20px 40px;
+            width: 100%; /* Make breadcrumb span the full width */
+            padding: 10px 20px;
             font-size: 0.9rem;
+            text-align: left; /* Align text to the left */
+            background-color: #f8f9fa;
         }
 
         .breadcrumb a {
-            color: #2C3E50;
+            color: #008080;
             text-decoration: none;
             font-weight: bold;
         }
@@ -63,129 +24,23 @@
         .breadcrumb a:hover {
             text-decoration: underline;
         }
-
-        /* Main Content Styling */
-        main {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            padding: 20px 40px;
-            overflow: hidden;
-        }
-
-        .add-question-btn {
-            margin-bottom: 20px;
-            display: inline-block;
-        }
-
-        .search-box {
-            margin-bottom: 20px;
-        }
-
-        .search-box input {
-            padding: 10px;
-            width: 300px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .table-container {
-            flex: 1;
-            overflow-y: auto;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #2C3E50;
-            color: white;
-        }
-
-        .btn {
-            background-color: #2C3E50;
-            color: white;
-            padding: 5px 10px;
-            text-decoration: none;
-            font-size: 0.9rem;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: #1A252F;
-        }
-
-        /* Modal Styling */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .modal-content p {
-            margin-bottom: 20px;
-        }
-
-        .modal-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .modal-buttons .btn {
-            padding: 10px 20px;
-        }
-
-        /* Footer Styling */
-        footer {
-            background-color: #2C3E50;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-        }
     </style>
 </head>
 <body>
-    <header>
-        <div class="page-title">List Questions</div>
-        <a href="/" class="logout-btn">Logout</a>
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">List Questions</div>
+            <a href="/" class="logout-btn" onclick="localStorage.clear();">Logout</a>
+        </nav>
     </header>
+
     <div class="breadcrumb">
         <a href="/admin">Admin Dashboard</a> > <a href="/list-questions">List Questions</a>
     </div>
+
     <main>
-        <a href="/add-question" class="btn add-question-btn">Add New Question</a>
+        <h2>Manage Questions</h2>
+        <a href="/add-question" class="btn" style="margin-bottom: 20px;">Add New Question</a>
         <div class="search-box">
             <input type="text" id="search" placeholder="Search by question..." oninput="filterQuestions()">
         </div>
@@ -202,31 +57,29 @@
                     </tr>
                 </thead>
                 <tbody id="questions-table">
-                    <!-- Questions will be dynamically populated here -->
                 </tbody>
             </table>
         </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Your Company. All rights reserved.</p>
+
+    <footer class="footer">
+        <p>&copy; 2025 DISC Personality. All rights reserved.</p>
     </footer>
 
-    <!-- Confirmation Modal -->
     <div id="confirmation-modal" class="modal">
         <div class="modal-content">
             <p>Are you sure you want to delete this question?</p>
             <div class="modal-buttons">
-                <button id="confirm-delete" class="btn">Yes</button>
-                <button id="cancel-delete" class="btn">No</button>
+                <button id="confirm-delete" class="btn btn-danger">Yes, Delete</button>
+                <button id="cancel-delete" class="btn btn-secondary">No, Cancel</button>
             </div>
         </div>
     </div>
 
-    <!-- Success Modal -->
     <div id="success-modal" class="modal">
         <div class="modal-content">
             <p>Question deleted successfully!</p>
-            <button id="close-success-modal" class="btn">Close</button>
+            <button id="close-success-modal" class="btn">OK</button>
         </div>
     </div>
 
@@ -240,72 +93,85 @@
                 const tableBody = document.getElementById('questions-table');
                 tableBody.innerHTML = '';
                 questions.forEach(question => {
-                    tableBody.innerHTML += `
-                        <tr>
-                            <td>${question.question}</td>
-                            <td>${question.dominance}</td>
-                            <td>${question.influence}</td>
-                            <td>${question.steadiness}</td>
-                            <td>${question.conscientiousness}</td>
-                            <td><button class="btn" onclick="showConfirmationModal(${question.id})">Delete</button></td>
-                        </tr>
+                    const row = document.createElement('tr'); // Create row element
+                    row.innerHTML = `
+                        <td>${question.question}</td>
+                        <td>${question.dominance}</td>
+                        <td>${question.influence}</td>
+                        <td>${question.steadiness}</td>
+                        <td>${question.conscientiousness}</td>
+                        <td><button class="btn btn-danger" onclick="showConfirmationModal(${question.id})">Delete</button></td>
                     `;
+                    tableBody.appendChild(row); // Append the row
                 });
+            })
+            .catch(error => {
+                console.error('Error fetching questions:', error);
+                // Optionally display an error message to the user in the table body
+                const tableBody = document.getElementById('questions-table');
+                tableBody.innerHTML = '<tr><td colspan="6" style="text-align:center; color: red;">Could not load questions.</td></tr>';
             });
 
         // Show confirmation modal
         function showConfirmationModal(id) {
             questionToDelete = id;
-            const modal = document.getElementById('confirmation-modal');
-            modal.style.display = 'flex';
+            document.getElementById('confirmation-modal').style.display = 'flex';
         }
 
         // Hide confirmation modal
         function hideConfirmationModal() {
-            const modal = document.getElementById('confirmation-modal');
-            modal.style.display = 'none';
+            document.getElementById('confirmation-modal').style.display = 'none';
             questionToDelete = null;
         }
 
         // Show success modal
         function showSuccessModal() {
-            const modal = document.getElementById('success-modal');
-            modal.style.display = 'flex';
+            document.getElementById('success-modal').style.display = 'flex';
         }
 
-        // Hide success modal
+        // Hide success modal and reload
         function hideSuccessModal() {
-            const modal = document.getElementById('success-modal');
-            modal.style.display = 'none';
+            document.getElementById('success-modal').style.display = 'none';
+            location.reload(); // Reload the page to show updated list
         }
 
-        // Confirm delete
+        // Event listeners for modal buttons
         document.getElementById('confirm-delete').addEventListener('click', () => {
             if (questionToDelete) {
                 fetch(`/api/questions/${questionToDelete}`, { method: 'DELETE' })
                     .then(response => response.json())
                     .then(result => {
-                        showSuccessModal();
-                        const closeSuccessModalButton = document.getElementById('close-success-modal');
-                        closeSuccessModalButton.addEventListener('click', () => {
-                            hideSuccessModal();
-                            location.reload();
-                        });
+                        if (result.message) { // Check for success message
+                            hideConfirmationModal();
+                            showSuccessModal();
+                        } else {
+                            console.error("Delete failed:", result.error);
+                            alert("Failed to delete question."); // Show error alert
+                            hideConfirmationModal();
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error deleting question:", error);
+                        alert("An error occurred while deleting the question.");
+                        hideConfirmationModal();
                     });
             }
-            hideConfirmationModal();
         });
 
-        // Cancel delete
         document.getElementById('cancel-delete').addEventListener('click', hideConfirmationModal);
+        document.getElementById('close-success-modal').addEventListener('click', hideSuccessModal);
 
         // Filter questions by search input
         function filterQuestions() {
             const searchValue = document.getElementById('search').value.toLowerCase();
             const rows = document.querySelectorAll('#questions-table tr');
             rows.forEach(row => {
-                const questionText = row.querySelector('td').textContent.toLowerCase();
-                row.style.display = questionText.includes(searchValue) ? '' : 'none';
+                // Ensure row has TD elements before trying to access textContent
+                const firstCell = row.querySelector('td');
+                if (firstCell) {
+                    const questionText = firstCell.textContent.toLowerCase();
+                    row.style.display = questionText.includes(searchValue) ? '' : 'none';
+                }
             });
         }
     </script>
