--- a/Dashboard/chatbox.html
+++ b/Dashboard/chatbox.html
@@ -51,12 +51,11 @@
         }
 
         .breadcrumb {
-            max-width: 1100px;
-            margin: 10px auto 0;
-            padding: 0 20px;
+            width: 100%;
+            padding: 10px 20px;
             font-size: 0.9rem;
             text-align: left;
-            align-self: flex-start;
+            background-color: #f8f9fa;
         }
 
         .breadcrumb a {
@@ -140,13 +139,13 @@
 
         /* Modal Styling */
         .modal {
-            display: none; /* Hidden by default */
+            display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            background-color: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
             z-index: 1000;
@@ -185,7 +184,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="title">AI Assistant</div>
+        <div class="title">DISC Personality Analysis</div>
         <button class="logout-btn" onclick="localStorage.clear(); window.location.href = '/';">Logout</button>
     </header>
 
