Added Know More page

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -105,7 +105,7 @@
                 <a href="/Dashboard/chatbox.html" class="tile">Personal AI Assistance</a>
                 <div class="tile disabled">Saved Chats</div>
                 <div class="tile disabled">Profile</div>
-                <div class="tile disabled">Know More</div>
+                <a href="/Dashboard/know_more.html" class="tile">Know More</a>
                 <div class="tile disabled">Social</div>
             </div>
         </div>
